removed contrast button stuff, fixed tests

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -51,9 +51,7 @@ _(The `extend` directive can cause ugly cascade problems)_
 	font-weight: $W_medium;
 	line-height: $line-height;
 	outline: 0;
-	@include responsiveVarContext--base() {
-		padding: $base $base*2;
-	}
+	padding: $space $space-double;
 	vertical-align: middle;
 
 	@include browser-ie11() {
@@ -240,6 +238,7 @@ Class                   | Description
 			$hoverColor: opacify($C_fieldBGInverted, .05),
 			$activeColor: opacify($C_fieldBGInverted, .1)
 		);
+		@include color-all($C_textSecondaryInverted);
 	}
 }
 
